// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CapsHeading custom color 1`] = `
<div
  className="CapsHeading__StyledCapsHeading-rbzrmz-0 hbfBGJ"
>
  <h3>
    60 frames per second
  </h3>
</div>
`;

exports[`Storyshots CapsHeading custom selector 1`] = `
<div
  className="CapsHeading__StyledCapsHeading-rbzrmz-0 cRUeFz"
>
  <h4>
    Capture HDR gameplay videos
  </h4>
</div>
`;

exports[`Storyshots CapsHeading default 1`] = `
<div
  className="CapsHeading__StyledCapsHeading-rbzrmz-0 cRUeFz"
>
  <h3>
    Capture 4K UHD gameplay
  </h3>
</div>
`;

exports[`Storyshots Heading centered 1`] = `
<div
  className="Heading__StyledHeading-sc-12rv6sd-0 qtFrL"
>
  <h2>
    <span>
      Record your gameplay in the highest quality.
    </span>
  </h2>
</div>
`;

exports[`Storyshots Heading custom color 1`] = `
<div
  className="Heading__StyledHeading-sc-12rv6sd-0 cqkYNX"
>
  <h2>
    <span>
      4K 60FPS + HDR videos are the future.
    </span>
  </h2>
</div>
`;

exports[`Storyshots Heading custom selector 1`] = `
<div
  className="Heading__StyledHeading-sc-12rv6sd-0 eQKwui"
>
  <h1>
    <span>
      RecordRig technical specifications.
    </span>
  </h1>
</div>
`;

exports[`Storyshots Heading default 1`] = `
<div
  className="Heading__StyledHeading-sc-12rv6sd-0 eQKwui"
>
  <h2>
    <span>
      Cinematic 4K HDR video example.
    </span>
  </h2>
</div>
`;

exports[`Storyshots MainMenu default 1`] = `
<nav
  className="MainMenu__StyledMainMenu-sc-1jfwqxv-2 cxIrom"
>
  <ul>
    <li>
      <a
        className="MainMenu__StyledLink-sc-1jfwqxv-0 fmwHXl"
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <span>
          Home
        </span>
        <img
          alt=""
          src="/static/icon-arrow-right.png"
        />
      </a>
    </li>
    <li>
      <a
        className="MainMenu__StyledLink-sc-1jfwqxv-0 fmwHXl"
        href="/shop"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <span>
          Shop
        </span>
        <img
          alt=""
          src="/static/icon-arrow-right.png"
        />
      </a>
    </li>
    <li>
      <a
        className="MainMenu__StyledExternalLink-sc-1jfwqxv-1 cakXWo"
        href="https://twitter.com/RigRecord"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <span>
          Twitter
        </span>
        <img
          alt=""
          src="/static/icon-arrow-up-right.png"
        />
      </a>
    </li>
    <li>
      <a
        className="MainMenu__StyledExternalLink-sc-1jfwqxv-1 cakXWo"
        href="https://www.reddit.com/r/RecordRig/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <span>
          Reddit
        </span>
        <img
          alt=""
          src="/static/icon-arrow-up-right.png"
        />
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Storyshots MenuBar default 1`] = `
<nav
  className="MenuBar__StyledTopMenu-sc-1n2uiiq-5 bHIivz"
>
  <ul>
    <li>
      <a
        className="MenuBar__StyledLogo-sc-1n2uiiq-0 bNPGYV"
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <img
          alt=""
          src="/static/recordrig-logo.png"
        />
      </a>
    </li>
    <li>
      <a
        className="MenuBar__StyledShopButton-sc-1n2uiiq-1 kluQLd"
        href="/shop"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Shop
      </a>
    </li>
    <li>
      <button
        className="MenuBar__StyledShoppingBagButton-sc-1n2uiiq-3 iOKgEx"
      >
        <img
          alt=""
          src="/static/icon-shopping-bag.png"
        />
        <span>
          Shopping Bag
        </span>
      </button>
    </li>
    <li>
      <button
        className="MenuBar__StyledMenuButton-sc-1n2uiiq-4 gLHVyq"
      >
        <img
          alt=""
          src="/static/icon-menu.png"
        />
        <span>
          Menu
        </span>
      </button>
    </li>
  </ul>
</nav>
`;

exports[`Storyshots MenuBar items in bag 1`] = `
<nav
  className="MenuBar__StyledTopMenu-sc-1n2uiiq-5 bHIivz"
>
  <ul>
    <li>
      <a
        className="MenuBar__StyledLogo-sc-1n2uiiq-0 bNPGYV"
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <img
          alt=""
          src="/static/recordrig-logo.png"
        />
      </a>
    </li>
    <li>
      <a
        className="MenuBar__StyledShopButton-sc-1n2uiiq-1 kluQLd"
        href="/shop"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Shop
      </a>
    </li>
    <li>
      <button
        className="MenuBar__StyledShoppingBagButton-sc-1n2uiiq-3 iOKgEx"
      >
        <img
          alt=""
          src="/static/icon-shopping-bag.png"
        />
        <span>
          Shopping Bag
        </span>
        <span
          className="MenuBar__StyledBagIndicator-sc-1n2uiiq-2 eziWdc"
        >
          2
        </span>
      </button>
    </li>
    <li>
      <button
        className="MenuBar__StyledMenuButton-sc-1n2uiiq-4 gLHVyq"
      >
        <img
          alt=""
          src="/static/icon-menu.png"
        />
        <span>
          Menu
        </span>
      </button>
    </li>
  </ul>
</nav>
`;

exports[`Storyshots Paragraph custom color 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#13171a",
    }
  }
>
  <p
    className="Paragraph__StyledParagraph-q6tii9-0 dpEDmS"
  >
    Demand for high-quality gameplay videos is booming. Now, with RecordRig, recording games in the same high quality you play them is easier than ever. Capture your gameplay in its full glory and give your audience the complete, immersive experience that they crave.
  </p>
</div>
`;

exports[`Storyshots Paragraph default 1`] = `
<p
  className="Paragraph__StyledParagraph-q6tii9-0 bygGob"
>
  Demand for high-quality gameplay videos is booming. Now, with RecordRig, recording games in the same high quality you play them is easier than ever. Capture your gameplay in its full glory and give your audience the complete, immersive experience that they crave.
</p>
`;
